<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_baseline_home_24"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_login"
            android:icon="@android:drawable/ic_lock_idle_lock"
            android:title="@string/menu_login" />
        <item
            android:id="@+id/nav_missing"
            android:icon="@drawable/ic_baseline_missing_24"
            android:title="@string/menu_missing" />
        <item
            android:id="@+id/nav_found"
            android:icon="@drawable/ic_baseline_found_24"
            android:title="@string/menu_found"/>
        <item
            android:id="@+id/nav_aboutus"
            android:icon="@drawable/ic_baseline_about_us_24"
            android:title="@string/menu_about_us" />
        <item
            android:id="@+id/nav_donate"
            android:icon="@drawable/ic_baseline_donate_24"
            android:title="@string/menu_donate" />
        <item
            android:id="@+id/nav_changelang"
            android:icon="@drawable/ic_baseline_language_24"
            android:title="@string/menu_changelang" />
    </group>
</menu>