<resources>
    <string name="app_name">GetMyPet</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_login">Login</string>
    <string name="menu_register">Sign Up</string>
    <string name="menu_missing">Missing</string>
    <string name="menu_found">Found</string>
    <string name="menu_about_us">About Us</string>
    <string name="menu_donate">Donate</string>
    <string name="menu_changelang">Change Language</string>
    <string name="menu_add_report">Add Report</string>
    <string name="menu_user_overview">User Overview</string>

    <string name="login_header">Login</string>
    <string name="login_username">Username:</string>
    <string name="login_username_sample">Username</string>
    <string name="login_password">Password:</string>
    <string name="login_password_sample">Password</string>
    <string name="login_button">LOGIN</string>
    <string name="forgot_password_button">Forgot password?</string>
    <string name="login_register_button">Create new account</string>

    <string name="register_header">Sign Up</string>
    <string name="register_username_sample">Username*</string>
    <string name="register_first_name">First Name</string>
    <string name="register_last_name">Last Name</string>
    <string name="register_mail_address">Mail Address*</string>
    <string name="register_phone_number">Phone Number</string>
    <string name="register_password">Password:</string>
    <string name="register_password_sample">Password*</string>
    <string name="register_confirm_password_sample">Confirm Password*</string>
    <string name="register_button">SIGN UP</string>

    <string name="error_username">Username is mandatory</string>
    <string name="register_error_username_in_use">User name is already in use</string>
    <string name="register_error_mail">Mail address is mandatory</string>
    <string name="register_error_mail_valid">Not a valid mail address</string>
    <string name="error_password">Password is mandatory</string>
    <string name="register_error_password_match">Passwords do not match</string>
    <string name="register_error_phone">Not a valid phone number</string>

    <string name="home_title_missing">Missing Pets</string>
    <string name="home_title_found">Found Pets</string>

    <string name="title_missing">Missing</string>
    <string name="title_found">Found</string>
    <string name="search_missing">Region, Colour ,Type , Race</string>
    <string name="search_found">Region, Colour ,Type , Race</string>
    <string name="search_missing_title"> Search for pet name</string>
    <string name="search_found_title"> Search for pet name</string>
    <string name="missing_preview">Preview 1</string>
    <string name="found_preview">Preview 1</string>
    <string name="fab_found_content_description">Create found pet report</string>
    <string name="fab_missing_content_description">Create missing pet report</string>

    <string name="select_species">Select Species</string>

    <string name="animal_species">Animal Species</string>
    <string-array name="animal_species_array">
        <item>@string/select_species</item>
        <item>Dog</item>
        <item>Cat</item>
        <item>Rabbit</item>
        <item>Bird</item>
    </string-array>

    <string name="select_colour">Select Colour</string>

    <string name="colour">Colour</string>
    <string-array name="colours_array">
        <item>@string/select_colour</item>
        <item>Brown</item>
        <item>Black</item>
        <item>White</item>
        <item>Black Tri</item>
        <item>Blond</item>
        <item>Yellow</item>
        <item>Grey</item>
    </string-array>

    <string name="select_region">Select Province</string>

    <string name="region">Region</string>
    <string-array name="regions_array">
        <item>@string/select_region</item>
        <item>Burgenland</item>
        <item>Kärnten</item>
        <item>Niederösterreich</item>
        <item>Oberösterreich</item>
        <item>Salzburg</item>
        <item>Steiermark</item>
        <item>Tirol</item>
        <item>Vorarlberg</item>
        <item>Wien</item>
    </string-array>

    <string name="breed">Breed</string>
    <string name="Pet_Missing">Name of the Pet</string>
    <string name="example_name">Waldi</string>
    <string name="example_region">Styria</string>
    <string name="example_age">18</string>
    <string name="example_gender">Male</string>
    <string name="example_chip_number">123456789</string>
    <string name="pet_spezies_sample">Dog</string>
    <string name="sample_species">Species : Dog</string>
    <string name="species">Species</string>
    <string name="Breed">Breed</string>
    <string name="sample_breed">Australian Shepherd</string>
    <string name="Colour">Colour</string>
    <string name="sample_colour">Grey</string>
    <string name="last_seen">Last Seen</string>
    <string name="sample_seen">01.01.2000</string>
    <string name="image">Image:</string>
    <string name="select_image">SELECT IMAGE</string>

    <string name="lang_en">English</string>
    <string name="lang_ru">русский</string>

    <string name="login_error_username">User does not exist</string>
    <string name="login_error_password">Incorrect Password</string>

    <string name="action_user">User</string>

    <string name="name">Name</string>
    <string name="age">Age</string>
    <string name="gender">Gender</string>
    <string name="chipNo">Chip Number</string>
    <string name="save_button">SAVE</string>

    <string name="generic_error">Please provide an input</string>
    <string name="Donation">Donation</string>
    <string name="text_donate">Thank you for your support!</string>
    <string name="user_overview_title">User Overview</string>
    <string name="user_overview_first_name">First Name:</string>
    <string name="user_overview_last_name">Last Name:</string>
    <string name="user_overview_mail_address">Mail Address:</string>
    <string name="user_overview_phone_number">Phone Number:</string>
    <string name="user_overview_logout_button">LOGOUT</string>
    <string name="user_overview_sample_info">Sample Info</string>
    <string name="user_overview_no_first_name">No First Name</string>
    <string name="user_overview_no_last_name">No Last Name</string>
    <string name="user_overview_no_phone">No Phone Number</string>
    <string name="pet_found_date">Found on</string>
    <string name="filter_button">Filter</string>
    <string name="phone_image_button_content_description">Phone</string>
    <string name="email_image_button_content_description">Email</string>
    <string name="message_image_button_content_description">Message</string>

    <string name="icon">Contact Image Button</string>

    <string name="about_us_html"><![CDATA[
        <h1 style="text-align:center">Get My Pet</h1>
        <h3 style="text-align:center"><i>An app to help people find their lost pets</i></h3>
        <p style="text-align:center">Losing a beloved pet is always a hard time for people. That\'s where <i>Get My Pet</i> comes in handy.
        The app lets users <em>report missing and found pets</em> to help others reunite with their dogs, cats, etc…</p>
        <hr>
        <p style="margin-bottom:1cm;">The team behind <i>Get My Pet</i>:</p>
        <h5>Product Owner</h5>
        <ul>
        <li>Ismael Ibrahim</li>
        </ul>
        <h5>Scrum Master</h5>
        <ul>
        <li>Christopher Oser</li>
        </ul>
        <h5>Senior Developer</h5>
        <ul>
        <li>Michael Streibl</li>
        </ul>
        <h5>Junior Developers</h5>
        <ul>
        <li>Denis Tomic</li>
        <li>Emil Winterleitner</li>
        <li>Namik Barucija</li>
        <li>Sabrina Hiden</li>
        </ul>
        <hr>
        <p style="text-align:center"><small>Copyright &copy; 2021 sw21-tug/Team_21<br>All rights reserved</small></p>
        ]]>
    </string>
</resources>